--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
             </div>
         </div>
 
-        <div class="prompt-card">
+        <div class="prompt-card" style="display:none">
             <div class="input-container">
                 <textarea class="prompt-input" id="promptInput" placeholder="Ask about JEE admissions, cutoffs, counseling process, or college selection..."></textarea>
                 <button class="send-button" id="sendButton">
